[package]
name = "rust_module"
version = "0.0.1"
authors = ["Edgar Simo-Serra <bobbens@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[workspace]

[features]
lua54 = ["mlua/lua54"]
lua53 = ["mlua/lua53"]
lua52 = ["mlua/lua52"]
lua51 = ["mlua/lua51"]
luajit = ["mlua/luajit"]

[dependencies]
mlua = { version = "0", features = ["module","send"] }
iced = { git = "https://github.com/iced-rs/iced", features=["advanced"] }
iced_core = { git = "https://github.com/iced-rs/iced", features=["advanced"] }
iced_widget = { git = "https://github.com/iced-rs/iced", features=["advanced"] }
